# Hello_SPGrid

./: CMakeLists.txt  Heat_Diffusion_Driver.cpp  Heat_Diffusion_Driver.h  Heat_Diffusion_Example.cpp  Heat_Diffusion_Example.h  Heat_Transfer_Driver.cpp  Heat_Transfer_Driver.h  Heat_Transfer_Example.cpp  Heat_Transfer_Example.h  Initialize_Dirichlet_Cells.h  Poisson_Data.h  README.md  Write_To_File_Helper.h
Rasterizers/: Adaptive_Sphere_Rasterizer.h  Randomized_Rasterizer.h
demo_heat/: CMakeLists.txt  main.cpp
demo_heat/Standard_Tests/: Standard_Tests.h
demo_heat_diffusion/Standard_Tests/: Standard_Tests.h
pyalg_ref/: Implicit.py  main.py
